--- a/index.html
+++ b/index.html
@@ -142,6 +142,15 @@
     .signup-only {
       display: none;
     }
+
+    .message {
+      margin-top: 20px;
+      font-size: 15px;
+      font-weight: 500;
+      color: #ffeeee;
+      display: none;
+      transition: opacity 0.3s;
+    }
   </style>
 </head>
 <body>
@@ -175,36 +184,43 @@
     <div class="toggle-link" onclick="toggleForm()">
       Don’t have an account? Sign up
     </div>
+
+    <div class="message" id="message-box"></div>
   </div>
 
- <script>
-  const title = document.getElementById("form-title");
-  const toggleLink = document.querySelector(".toggle-link");
-  const btn = document.getElementById("main-button");
-  const signupFields = document.querySelectorAll(".signup-only");
+  <script>
+    const title = document.getElementById("form-title");
+    const toggleLink = document.querySelector(".toggle-link");
+    const btn = document.getElementById("main-button");
+    const signupFields = document.querySelectorAll(".signup-only");
+    const messageBox = document.getElementById("message-box");
 
-  let isLogin = true;
+    let isLogin = true;
 
-  function toggleForm() {
-    isLogin = !isLogin;
+    function toggleForm() {
+      isLogin = !isLogin;
 
-    title.textContent = isLogin ? "Login" : "Sign Up";
-    btn.textContent = isLogin ? "Continue" : "Register";
-    toggleLink.textContent = isLogin
-      ? "Don’t have an account? Sign up"
-      : "Already have an account? Login";
+      title.textContent = isLogin ? "Login" : "Sign Up";
+      btn.textContent = isLogin ? "Continue" : "Register";
+      toggleLink.textContent = isLogin
+        ? "Don’t have an account? Sign up"
+        : "Already have an account? Login";
 
-    signupFields.forEach(el => {
-      el.style.display = isLogin ? "none" : "block";
+      signupFields.forEach(el => {
+        el.style.display = isLogin ? "none" : "block";
+      });
+
+      // Clear message when toggling
+      messageBox.style.display = "none";
+    }
+
+    btn.addEventListener("click", () => {
+      messageBox.textContent = isLogin
+        ? "Welcome back! 🎉"
+        : "Thanks for signing up! ✨";
+      messageBox.style.display = "block";
     });
-  }
-
-  // REDIRECT TO WELCOME PAGE ON BUTTON CLICK
-  btn.addEventListener("click", () => {
-    // Here you can add form validation if needed
-    window.location.href = "welcome.html";
-  });
-</script>
+  </script>
 
 </body>
 </html>
